--- a/searchers/cloudformation_stacks_test_aws_fixture.yaml
+++ b/searchers/cloudformation_stacks_test_aws_fixture.yaml
@@ -1,114 +1,131 @@
 ---
-version: 1
+version: 2
 interactions:
-- request:
-    body: Action=DescribeStacks&Version=2010-05-15
-    form:
-      Action:
-      - DescribeStacks
-      Version:
-      - "2010-05-15"
-    headers:
-      Content-Type:
-      - application/x-www-form-urlencoded
-    url: https://cloudformation.us-west-2.amazonaws.com/
-    method: POST
-  response:
-    body: |
-      <DescribeStacksResponse xmlns="http://cloudformation.amazonaws.com/doc/2010-05-15/">
-        <DescribeStacksResult>
-          <Stacks>
-            <member>
-              <Capabilities>
-                <member>CAPABILITY_IAM</member>
-              </Capabilities>
-              <CreationTime>2020-01-01T00:00:00.000Z</CreationTime>
-              <NotificationARNs/>
-              <StackId>arn:aws:cloudformation:us-west-2:0000000000:stack/awseb-e-aaaaaaaaaa-stack/00000000-0000-0000-0000-000000000000</StackId>
-              <StackName>awseb-e-aaaaaaaaaa-stack</StackName>
-              <Description>AWS Elastic Beanstalk environment (Name: 'elasticbeanstalk-env-1'  Id: 'e-aaaaaaaaaa')</Description>
-              <StackStatus>CREATE_COMPLETE</StackStatus>
-              <DisableRollback>true</DisableRollback>
-              <Tags>
-                <member>
-                  <Value>elasticbeanstalk-env-1</Value>
-                  <Key>elasticbeanstalk:environment-name</Key>
-                </member>
-                <member>
-                  <Value>e-aaaaaaaaaa</Value>
-                  <Key>elasticbeanstalk:environment-id</Key>
-                </member>
-                <member>
-                  <Value>elasticbeanstalk-env-1</Value>
-                  <Key>Name</Key>
-                </member>
-              </Tags>
-              <RollbackConfiguration/>
-              <DriftInformation>
-                <StackDriftStatus>NOT_CHECKED</StackDriftStatus>
-              </DriftInformation>
-              <Parameters></Parameters>
-            </member>
-            <member>
-              <Capabilities>
-                <member>CAPABILITY_IAM</member>
-              </Capabilities>
-              <CreationTime>2020-01-01T00:00:00.000Z</CreationTime>
-              <NotificationARNs/>
-              <StackId>arn:aws:cloudformation:us-west-2:0000000000:stack/awseb-e-bbbbbbbbbb-stack/00000000-0000-0000-0000-000000000000</StackId>
-              <StackName>awseb-e-bbbbbbbbbb-stack</StackName>
-              <Description>AWS Elastic Beanstalk environment (Name: 'elasticbeanstalk-env-2'  Id: 'e-bbbbbbbbbb')</Description>
-              <StackStatus>CREATE_COMPLETE</StackStatus>
-              <DisableRollback>true</DisableRollback>
-              <Tags>
-                <member>
-                  <Value>elasticbeanstalk-env-2</Value>
-                  <Key>elasticbeanstalk:environment-name</Key>
-                </member>
-                <member>
-                  <Value>e-bbbbbbbbbb</Value>
-                  <Key>elasticbeanstalk:environment-id</Key>
-                </member>
-                <member>
-                  <Value>elasticbeanstalk-env-2</Value>
-                  <Key>Name</Key>
-                </member>
-              </Tags>
-              <RollbackConfiguration/>
-              <DriftInformation>
-                <StackDriftStatus>NOT_CHECKED</StackDriftStatus>
-              </DriftInformation>
-              <Parameters></Parameters>
-            </member>
-            <member>
-              <Capabilities>
-                <member>CAPABILITY_IAM</member>
-              </Capabilities>
-              <CreationTime>2020-01-01T00:00:00.000Z</CreationTime>
-              <NotificationARNs/>
-              <StackId>arn:aws:cloudformation:us-west-2:0000000000:stack/custom-stack-1/00000000-0000-0000-0000-000000000000</StackId>
-              <StackName>Custom Stack 1</StackName>
-              <Description>Custom Stack 1 Description</Description>
-              <StackStatus>CREATE_COMPLETE</StackStatus>
-              <DisableRollback>true</DisableRollback>
-              <Tags></Tags>
-              <RollbackConfiguration/>
-              <DriftInformation>
-                <StackDriftStatus>NOT_CHECKED</StackDriftStatus>
-              </DriftInformation>
-              <Parameters></Parameters>
-            </member>
-          </Stacks>
-        </DescribeStacksResult>
-        <ResponseMetadata>
-          <RequestId>00000000-0000-0000-0000-000000000000</RequestId>
-        </ResponseMetadata>
-      </DescribeStacksResponse>
-    headers:
-      Content-Type:
-      - text/xml
-      Vary:
-      - accept-encoding
-    status: 200 OK
-    code: 200
-    duration: ""
+    - id: 0
+      request:
+        proto: ""
+        proto_major: 0
+        proto_minor: 0
+        content_length: 0
+        transfer_encoding: []
+        trailer: {}
+        host: ""
+        remote_addr: ""
+        request_uri: ""
+        body: Action=DescribeStacks&Version=2010-05-15
+        form:
+            Action:
+                - DescribeStacks
+            Version:
+                - "2010-05-15"
+        headers:
+            Content-Type:
+                - application/x-www-form-urlencoded
+        url: https://cloudformation.us-west-2.amazonaws.com/
+        method: POST
+      response:
+        proto: HTTP/1.1
+        proto_major: 1
+        proto_minor: 1
+        transfer_encoding: []
+        trailer: {}
+        content_length: 15463
+        uncompressed: false
+        body: |
+            <DescribeStacksResponse xmlns="http://cloudformation.amazonaws.com/doc/2010-05-15/">
+              <DescribeStacksResult>
+                <Stacks>
+                  <member>
+                    <Capabilities>
+                      <member>CAPABILITY_IAM</member>
+                    </Capabilities>
+                    <CreationTime>2020-01-01T00:00:00.000Z</CreationTime>
+                    <NotificationARNs/>
+                    <StackId>arn:aws:cloudformation:us-west-2:0000000000:stack/awseb-e-aaaaaaaaaa-stack/00000000-0000-0000-0000-000000000000</StackId>
+                    <StackName>awseb-e-aaaaaaaaaa-stack</StackName>
+                    <Description>AWS Elastic Beanstalk environment (Name: 'elasticbeanstalk-env-1'  Id: 'e-aaaaaaaaaa')</Description>
+                    <StackStatus>CREATE_COMPLETE</StackStatus>
+                    <DisableRollback>true</DisableRollback>
+                    <Tags>
+                      <member>
+                        <Value>elasticbeanstalk-env-1</Value>
+                        <Key>elasticbeanstalk:environment-name</Key>
+                      </member>
+                      <member>
+                        <Value>e-aaaaaaaaaa</Value>
+                        <Key>elasticbeanstalk:environment-id</Key>
+                      </member>
+                      <member>
+                        <Value>elasticbeanstalk-env-1</Value>
+                        <Key>Name</Key>
+                      </member>
+                    </Tags>
+                    <RollbackConfiguration/>
+                    <DriftInformation>
+                      <StackDriftStatus>NOT_CHECKED</StackDriftStatus>
+                    </DriftInformation>
+                    <Parameters></Parameters>
+                  </member>
+                  <member>
+                    <Capabilities>
+                      <member>CAPABILITY_IAM</member>
+                    </Capabilities>
+                    <CreationTime>2020-01-01T00:00:00.000Z</CreationTime>
+                    <NotificationARNs/>
+                    <StackId>arn:aws:cloudformation:us-west-2:0000000000:stack/awseb-e-bbbbbbbbbb-stack/00000000-0000-0000-0000-000000000000</StackId>
+                    <StackName>awseb-e-bbbbbbbbbb-stack</StackName>
+                    <Description>AWS Elastic Beanstalk environment (Name: 'elasticbeanstalk-env-2'  Id: 'e-bbbbbbbbbb')</Description>
+                    <StackStatus>CREATE_COMPLETE</StackStatus>
+                    <DisableRollback>true</DisableRollback>
+                    <Tags>
+                      <member>
+                        <Value>elasticbeanstalk-env-2</Value>
+                        <Key>elasticbeanstalk:environment-name</Key>
+                      </member>
+                      <member>
+                        <Value>e-bbbbbbbbbb</Value>
+                        <Key>elasticbeanstalk:environment-id</Key>
+                      </member>
+                      <member>
+                        <Value>elasticbeanstalk-env-2</Value>
+                        <Key>Name</Key>
+                      </member>
+                    </Tags>
+                    <RollbackConfiguration/>
+                    <DriftInformation>
+                      <StackDriftStatus>NOT_CHECKED</StackDriftStatus>
+                    </DriftInformation>
+                    <Parameters></Parameters>
+                  </member>
+                  <member>
+                    <Capabilities>
+                      <member>CAPABILITY_IAM</member>
+                    </Capabilities>
+                    <CreationTime>2020-01-01T00:00:00.000Z</CreationTime>
+                    <NotificationARNs/>
+                    <StackId>arn:aws:cloudformation:us-west-2:0000000000:stack/custom-stack-1/00000000-0000-0000-0000-000000000000</StackId>
+                    <StackName>Custom Stack 1</StackName>
+                    <Description>Custom Stack 1 Description</Description>
+                    <StackStatus>CREATE_COMPLETE</StackStatus>
+                    <DisableRollback>true</DisableRollback>
+                    <Tags></Tags>
+                    <RollbackConfiguration/>
+                    <DriftInformation>
+                      <StackDriftStatus>NOT_CHECKED</StackDriftStatus>
+                    </DriftInformation>
+                    <Parameters></Parameters>
+                  </member>
+                </Stacks>
+              </DescribeStacksResult>
+              <ResponseMetadata>
+                <RequestId>00000000-0000-0000-0000-000000000000</RequestId>
+              </ResponseMetadata>
+            </DescribeStacksResponse>
+        headers:
+            Connection:
+                - keep-alive
+            Content-Type:
+                - text/xml
+        status: 200 OK
+        code: 200
+        duration: 418.2235ms
