--- a/searchers/route53_hosted_zones_test_aws_fixture.yaml
+++ b/searchers/route53_hosted_zones_test_aws_fixture.yaml
@@ -1,56 +1,71 @@
 ---
-version: 1
+version: 2
 interactions:
-- request:
-    body: ""
-    form: {}
-    headers: {}
-    url: https://route53.amazonaws.com/2013-04-01/hostedzone?maxitems=100
-    method: GET
-  response:
-    body: |-
-      <?xml version="1.0"?>
-      <ListHostedZonesResponse xmlns="https://route53.amazonaws.com/doc/2013-04-01/">
-        <HostedZones>
-          <HostedZone>
+    - id: 0
+      request:
+        proto: ""
+        proto_major: 0
+        proto_minor: 0
+        content_length: 0
+        transfer_encoding: []
+        trailer: {}
+        host: ""
+        remote_addr: ""
+        request_uri: ""
+        body: ""
+        form: {}
+        headers: {}
+        url: https://route53.amazonaws.com/2013-04-01/hostedzone?maxitems=100
+        method: GET
+      response:
+        proto: HTTP/1.1
+        proto_major: 1
+        proto_minor: 1
+        transfer_encoding: []
+        trailer: {}
+        content_length: 551
+        uncompressed: false
+        body: |-
+            <?xml version="1.0"?>
+            <ListHostedZonesResponse xmlns="https://route53.amazonaws.com/doc/2013-04-01/">
+              <HostedZones>
+                <HostedZone>
             <Id>/hostedzone/ZZZZZZZZZZZZZ</Id>
-            <Name>google.com.</Name>
-            <CallerReference>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</CallerReference>
-            <Config>
-              <Comment>HostedZone created by Route53 Registrar</Comment>
-              <PrivateZone>false</PrivateZone>
-            </Config>
-            <ResourceRecordSetCount>12</ResourceRecordSetCount>
-          </HostedZone>
-          <HostedZone>
+                  <Name>google.com.</Name>
+                  <CallerReference>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</CallerReference>
+                  <Config>
+                    <Comment>HostedZone created by Route53 Registrar</Comment>
+                    <PrivateZone>false</PrivateZone>
+                  </Config>
+                  <ResourceRecordSetCount>12</ResourceRecordSetCount>
+                </HostedZone>
+                <HostedZone>
             <Id>/hostedzone/ZYYYYYYYYYYYYY</Id>
-            <Name>mozilla.com.</Name>
-            <CallerReference>00000000-0000-0000-0000-000000000000</CallerReference>
-            <Config>
-              <Comment>description</Comment>
-              <PrivateZone>false</PrivateZone>
-            </Config>
-            <ResourceRecordSetCount>2</ResourceRecordSetCount>
-          </HostedZone>
-          <HostedZone>
+                  <Name>mozilla.com.</Name>
+                  <CallerReference>00000000-0000-0000-0000-000000000000</CallerReference>
+                  <Config>
+                    <Comment>description</Comment>
+                    <PrivateZone>false</PrivateZone>
+                  </Config>
+                  <ResourceRecordSetCount>2</ResourceRecordSetCount>
+                </HostedZone>
+                <HostedZone>
             <Id>/hostedzone/ZWWWWWWWWWWWWW</Id>
-            <Name>news.ycombinator.com.</Name>
-            <CallerReference>00000000-0000-0000-0000-000000000000</CallerReference>
-            <Config>
-              <Comment>HostedZone created by Route53 Registrar</Comment>
-              <PrivateZone>true</PrivateZone>
-            </Config>
-            <ResourceRecordSetCount>1</ResourceRecordSetCount>
-          </HostedZone>
-        </HostedZones>
-        <IsTruncated>false</IsTruncated>
-        <MaxItems>100</MaxItems>
-      </ListHostedZonesResponse>
-    headers:
-      Content-Type:
-      - text/xml
-      Vary:
-      - accept-encoding
-    status: 200 OK
-    code: 200
-    duration: ""
+                  <Name>news.ycombinator.com.</Name>
+                  <CallerReference>00000000-0000-0000-0000-000000000000</CallerReference>
+                  <Config>
+                    <Comment>HostedZone created by Route53 Registrar</Comment>
+                    <PrivateZone>true</PrivateZone>
+                  </Config>
+                  <ResourceRecordSetCount>1</ResourceRecordSetCount>
+                </HostedZone>
+              </HostedZones>
+              <IsTruncated>false</IsTruncated>
+              <MaxItems>100</MaxItems>
+            </ListHostedZonesResponse>
+        headers:
+            Content-Type:
+                - text/xml
+        status: 200 OK
+        code: 200
+        duration: 253.82975ms
