--- a/searchers/sns_subscriptions_test_aws_fixture.yaml
+++ b/searchers/sns_subscriptions_test_aws_fixture.yaml
@@ -1,108 +1,144 @@
 ---
-version: 1
+version: 2
 interactions:
-- request:
-    body: Action=ListSubscriptions&Version=2010-03-31
-    form:
-      Action:
-      - ListSubscriptions
-      Version:
-      - "2010-03-31"
-    headers:
-      Content-Type:
-      - application/x-www-form-urlencoded
-    url: https://sns.us-west-2.amazonaws.com/
-    method: POST
-  response:
-    body: |
-      <ListSubscriptionsResponse xmlns="http://sns.amazonaws.com/doc/2010-03-31/">
-        <ListSubscriptionsResult>
-          <Subscriptions>
-            <member>
-              <Owner>00000000</Owner>
-              <Endpoint>google@gmail.com</Endpoint>
-              <Protocol>email</Protocol>
-              <SubscriptionArn>PendingConfirmation</SubscriptionArn>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-1</TopicArn>
-            </member>
-            <member>
-              <Owner>00000000</Owner>
-              <Endpoint>http://www.google.com</Endpoint>
-              <Protocol>http</Protocol>
-              <SubscriptionArn>arn:aws:sns:us-west-2:0000000000:topic-2:00000000-0000-0000-0000-000000000000</SubscriptionArn>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-2</TopicArn>
-            </member>
-            <member>
-              <Owner>00000000</Owner>
-              <Endpoint>google@gmail.com</Endpoint>
-              <Protocol>email</Protocol>
-              <SubscriptionArn>PendingConfirmation</SubscriptionArn>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-3</TopicArn>
-            </member>
-            <member>
-              <Owner>00000000</Owner>
-              <Endpoint>google@gmail.com</Endpoint>
-              <Protocol>email</Protocol>
-              <SubscriptionArn>PendingConfirmation</SubscriptionArn>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-4</TopicArn>
-            </member>
-            <member>
-              <Owner>00000000</Owner>
-              <Endpoint>google@gmail.com</Endpoint>
-              <Protocol>email</Protocol>
-              <SubscriptionArn>PendingConfirmation</SubscriptionArn>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-5</TopicArn>
-            </member>
-          </Subscriptions>
-          <NextToken>BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</NextToken>
-        </ListSubscriptionsResult>
-        <ResponseMetadata>
-          <RequestId>00000000-0000-0000-0000-000000000000</RequestId>
-        </ResponseMetadata>
-      </ListSubscriptionsResponse>
-    headers:
-      Content-Type:
-      - text/xml
-      Vary:
-      - Accept-Encoding
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: Action=ListSubscriptions&NextToken=BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB&Version=2010-03-31
-    form:
-      Action:
-      - ListSubscriptions
-      NextToken:
-      - BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
-      Version:
-      - "2010-03-31"
-    headers:
-      Content-Type:
-      - application/x-www-form-urlencoded
-    url: https://sns.us-west-2.amazonaws.com/
-    method: POST
-  response:
-    body: |
-      <ListSubscriptionsResponse xmlns="http://sns.amazonaws.com/doc/2010-03-31/">
-        <ListSubscriptionsResult>
-          <Subscriptions>
-            <member>
-              <Owner>00000000</Owner>
-              <Endpoint>http://www.google.com</Endpoint>
-              <Protocol>http</Protocol>
-              <SubscriptionArn>arn:aws:sns:us-west-2:0000000000:paginated-result:00000000-0000-0000-0000-000000000000</SubscriptionArn>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:paginated-result</TopicArn>
-            </member>
-          </Subscriptions>
-        </ListSubscriptionsResult>
-        <ResponseMetadata>
-          <RequestId>00000000-0000-0000-0000-000000000000</RequestId>
-        </ResponseMetadata>
-      </ListSubscriptionsResponse>
-    headers:
-      Content-Type:
-      - text/xml
-    status: 200 OK
-    code: 200
-    duration: ""
+    - id: 0
+      request:
+        proto: ""
+        proto_major: 0
+        proto_minor: 0
+        content_length: 0
+        transfer_encoding: []
+        trailer: {}
+        host: ""
+        remote_addr: ""
+        request_uri: ""
+        body: Action=ListSubscriptions&Version=2010-03-31
+        form:
+            Action:
+                - ListSubscriptions
+            Version:
+                - "2010-03-31"
+        headers:
+            Content-Type:
+                - application/x-www-form-urlencoded
+        url: https://sns.us-west-2.amazonaws.com/
+        method: POST
+      response:
+        proto: HTTP/1.1
+        proto_major: 1
+        proto_minor: 1
+        transfer_encoding: []
+        trailer: {}
+        content_length: 367
+        uncompressed: false
+        body: |
+            <ListSubscriptionsResponse xmlns="http://sns.amazonaws.com/doc/2010-03-31/">
+              <ListSubscriptionsResult>
+                <Subscriptions>
+                  <member>
+                    <Owner>00000000</Owner>
+                    <Endpoint>google@gmail.com</Endpoint>
+                    <Protocol>email</Protocol>
+                    <SubscriptionArn>PendingConfirmation</SubscriptionArn>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-1</TopicArn>
+                  </member>
+                  <member>
+                    <Owner>00000000</Owner>
+                    <Endpoint>http://www.google.com</Endpoint>
+                    <Protocol>http</Protocol>
+                    <SubscriptionArn>arn:aws:sns:us-west-2:0000000000:topic-2:00000000-0000-0000-0000-000000000000</SubscriptionArn>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-2</TopicArn>
+                  </member>
+                  <member>
+                    <Owner>00000000</Owner>
+                    <Endpoint>google@gmail.com</Endpoint>
+                    <Protocol>email</Protocol>
+                    <SubscriptionArn>PendingConfirmation</SubscriptionArn>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-3</TopicArn>
+                  </member>
+                  <member>
+                    <Owner>00000000</Owner>
+                    <Endpoint>google@gmail.com</Endpoint>
+                    <Protocol>email</Protocol>
+                    <SubscriptionArn>PendingConfirmation</SubscriptionArn>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-4</TopicArn>
+                  </member>
+                  <member>
+                    <Owner>00000000</Owner>
+                    <Endpoint>google@gmail.com</Endpoint>
+                    <Protocol>email</Protocol>
+                    <SubscriptionArn>PendingConfirmation</SubscriptionArn>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:topic-5</TopicArn>
+                  </member>
+                </Subscriptions>
+                <NextToken>BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</NextToken>
+              </ListSubscriptionsResult>
+              <ResponseMetadata>
+                <RequestId>00000000-0000-0000-0000-000000000000</RequestId>
+              </ResponseMetadata>
+            </ListSubscriptionsResponse>
+        headers:
+            Connection:
+                - keep-alive
+            Content-Type:
+                - text/xml
+        status: 200 OK
+        code: 200
+        duration: 389.942958ms
+    - id: 1
+      request:
+        proto: ""
+        proto_major: 0
+        proto_minor: 0
+        content_length: 0
+        transfer_encoding: []
+        trailer: {}
+        host: ""
+        remote_addr: ""
+        request_uri: ""
+        body: Action=ListSubscriptions&NextToken=BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB&Version=2010-03-31
+        form:
+            Action:
+                - ListSubscriptions
+            NextToken:
+                - BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
+            Version:
+                - "2010-03-31"
+        headers:
+            Content-Type:
+                - application/x-www-form-urlencoded
+        url: https://sns.us-west-2.amazonaws.com/
+        method: POST
+      response:
+        proto: HTTP/1.1
+        proto_major: 1
+        proto_minor: 1
+        transfer_encoding: []
+        trailer: {}
+        content_length: 291
+        uncompressed: false
+        body: |
+            <ListSubscriptionsResponse xmlns="http://sns.amazonaws.com/doc/2010-03-31/">
+              <ListSubscriptionsResult>
+                <Subscriptions>
+                  <member>
+                    <Owner>00000000</Owner>
+                    <Endpoint>http://www.google.com</Endpoint>
+                    <Protocol>http</Protocol>
+                    <SubscriptionArn>arn:aws:sns:us-west-2:0000000000:paginated-result:00000000-0000-0000-0000-000000000000</SubscriptionArn>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:paginated-result</TopicArn>
+                  </member>
+                </Subscriptions>
+              </ListSubscriptionsResult>
+              <ResponseMetadata>
+                <RequestId>00000000-0000-0000-0000-000000000000</RequestId>
+              </ResponseMetadata>
+            </ListSubscriptionsResponse>
+        headers:
+            Connection:
+                - keep-alive
+            Content-Type:
+                - text/xml
+        status: 200 OK
+        code: 200
+        duration: 82.408125ms
