--- a/searchers/sns_topics_test_aws_fixture.yaml
+++ b/searchers/sns_topics_test_aws_fixture.yaml
@@ -1,46 +1,63 @@
 ---
-version: 1
+version: 2
 interactions:
-- request:
-    body: Action=ListTopics&Version=2010-03-31
-    form:
-      Action:
-      - ListTopics
-      Version:
-      - "2010-03-31"
-    headers:
-      Content-Type:
-      - application/x-www-form-urlencoded
-    url: https://sns.us-west-2.amazonaws.com/
-    method: POST
-  response:
-    body: |
-      <ListTopicsResponse xmlns="http://sns.amazonaws.com/doc/2010-03-31/">
-        <ListTopicsResult>
-          <Topics>
-            <member>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:sns-topic-name-1</TopicArn>
-            </member>
-            <member>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:sns-topic-name-2</TopicArn>
-            </member>
-            <member>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:sns-topic-name-3</TopicArn>
-            </member>
-            <member>
-              <TopicArn>arn:aws:sns:us-west-2:0000000000:sns-topic-name-4</TopicArn>
-            </member>
-          </Topics>
-        </ListTopicsResult>
-        <ResponseMetadata>
-          <RequestId>00000000-0000-0000-0000-000000000000</RequestId>
-        </ResponseMetadata>
-      </ListTopicsResponse>
-    headers:
-      Content-Type:
-      - text/xml
-      Vary:
-      - Accept-Encoding
-    status: 200 OK
-    code: 200
-    duration: ""
+    - id: 0
+      request:
+        proto: ""
+        proto_major: 0
+        proto_minor: 0
+        content_length: 0
+        transfer_encoding: []
+        trailer: {}
+        host: ""
+        remote_addr: ""
+        request_uri: ""
+        body: Action=ListTopics&Version=2010-03-31
+        form:
+            Action:
+                - ListTopics
+            Version:
+                - "2010-03-31"
+        headers:
+            Content-Type:
+                - application/x-www-form-urlencoded
+        url: https://sns.us-west-2.amazonaws.com/
+        method: POST
+      response:
+        proto: HTTP/1.1
+        proto_major: 1
+        proto_minor: 1
+        transfer_encoding: []
+        trailer: {}
+        content_length: 256
+        uncompressed: false
+        body: |
+            <ListTopicsResponse xmlns="http://sns.amazonaws.com/doc/2010-03-31/">
+              <ListTopicsResult>
+                <Topics>
+                  <member>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:sns-topic-name-1</TopicArn>
+                  </member>
+                  <member>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:sns-topic-name-2</TopicArn>
+                  </member>
+                  <member>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:sns-topic-name-3</TopicArn>
+                  </member>
+                  <member>
+                    <TopicArn>arn:aws:sns:us-west-2:0000000000:sns-topic-name-4</TopicArn>
+                  </member>
+                </Topics>
+              </ListTopicsResult>
+              <ResponseMetadata>
+                <RequestId>00000000-0000-0000-0000-000000000000</RequestId>
+              </ResponseMetadata>
+            </ListTopicsResponse>
+        headers:
+            Connection:
+                - keep-alive
+            Content-Type:
+                - text/xml
+        status: 200 OK
+        code: 200
+        duration: 902.670292ms
